2005-02-21  Jakub Jelinek  <jakub@redhat.com>

[BZ #768]
	* nscd/nscd_gethst_r.c (nscd_gethst_r): Set *h_errnop to
	NETDB_INTERNAL if buffer is too small.